alerts fixed and box spacing in stats fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -723,7 +723,7 @@ footer{
     justify-content: space-between;
     margin-top: 2rem;
     >div{
-        width:50%;
+        width:46%;
 
         .boxed{
             padding:2rem;
@@ -763,7 +763,11 @@ footer{
 // --------------- error starts --------------
 
 .error{
-    background: #fff;
+    // background: #fff;
+    // border-radius: 0.8rem;
+    background: #E6F0F8;
+    box-shadow: inset 5px 5px 10px #d6dfe7, 
+                inset -5px -5px 10px #f6ffff;
     position: absolute;
     top:50%;
     left:50%;
@@ -837,8 +841,11 @@ footer{
 // ----------more info starts-------------
 
 .more-info{
-    background: #fff;
+    // background: #fff;
     position: absolute;
+    background: #E6F0F8;
+    box-shadow: inset 5px 5px 10px #d6dfe7, 
+                inset -5px -5px 10px #f6ffff;
     top:50%;
     left:50%;
     padding: 2rem;
